# filescanner

./: __init__.py  pyproject.toml  readme.md
src/: scanning.py
src/filescanner/: __init__.py  scanning.py
testing/: testing.py
