[tool.poetry]
name = "filescanner"
version = "0.1.0"
description = "Utility classes for recursively scanning directories to get files/dirs/manifests"
authors = ["Emmanuel Acosta <pixelomen@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
